--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 button {
     display: block;
-    margin: 20px auto; /* Centraliza o botão horizontalmente */
+    margin: 10px right; /* Centraliza o botão horizontalmente */
     padding: 10px 20px;
     font-family: 'Arial', sans-serif; /* Altere para a fonte desejada */
     font-size: 14px;
@@ -56,7 +56,12 @@ h1 {
     border-radius: 3px;
 }
   
-
+hr {
+    border: none;
+    border-top: 2px solid #ccc; /* Cor da linha */
+    margin: 10px auto 20px auto; /* Espaçamento acima e abaixo da linha */
+    width: 101%; /* Largura da linha */
+}
 
 
 
